force-app/main/default/objects/Knowledge__kav/fields/Design_Guideline__c.field-meta.xml
<CustomField>
    <fullName>Design_Guideline__c</fullName>
    <label>設計指針</label>
    <type>Html</type>
    <length>32768</length>
</CustomField>