force-app/main/default/objects/Knowledge__kav/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <label>教訓</label>
    <type>Html</type>
    <length>32768</length>
</CustomField>