force-app/main/default/objects/Knowledge__kav/fields/Procurement_Guideline__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Guideline__c</fullName>
    <label>調達指針</label>
    <type>Html</type>
    <length>32768</length>
</CustomField>