force-app/main/default/objects/Knowledge__kav/fields/Search_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Search_Keywords__c</fullName>
    <label>検索キーワード</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>