force-app/main/default/objects/Knowledge__kav/fields/Source_CA__c.field-meta.xml
<CustomField>
    <fullName>Source_CA__c</fullName>
    <label>元の是正措置</label>
    <type>Lookup</type>
    <referenceTo>Corrective_Action__c</referenceTo>
    <relationshipLabel>ナレッジ記事</relationshipLabel>
    <relationshipName>Knowledge_Articles</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>