force-app/main/default/objects/Knowledge__kav/fields/Source_CAs__c.field-meta.xml
<CustomField>
    <fullName>Source_CAs__c</fullName>
    <label>参照元CA一覧</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>