force-app/main/default/objects/Knowledge__kav/recordTypes/Design_Knowledge.recordType-meta.xml
<RecordType>
    <fullName>Design_Knowledge</fullName>
    <active>true</active>
    <label>設計ナレッジ</label>
</RecordType>